Bug fix and new content
- Fixed some surgery recipe doubled.
- Adds 2 new workbenches.
- Adds archotech prostheses crafting.
- Adds modules crafting.
- Adds 3 new implants.
- Adds 3 new modules.
- Balancing some value.
- And many more.

--- a/Source/MedicalSystemExpansion/OrenoMSE.csproj
+++ b/Source/MedicalSystemExpansion/OrenoMSE.csproj
@@ -59,7 +59,9 @@
     <Compile Include="MSE_DefOf\MSE_HediffDefOf.cs" />
     <Compile Include="MSE_Hediff\Hediff_AddedPartModule.cs" />
     <Compile Include="MSE_Hediff\Hediff_AddedPartSystem.cs" />
+    <Compile Include="MSE_Hediff\Hediff_AddedPartSystemNoModule.cs" />
     <Compile Include="MSE_Hediff\Hediff_BodyPartModule.cs" />
+    <Compile Include="MSE_Recipe\Recipe_InstallNaturalBodyPart.cs" />
     <Compile Include="MSE_Recipe\Recipe_RemoveBodyPart.cs" />
     <Compile Include="MSE_Recipe\Recipe_RemoveBodyPartSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
