--- a/Source/MedicalSystemExpansion/OrenoMSE.csproj
+++ b/Source/MedicalSystemExpansion/OrenoMSE.csproj
@@ -36,7 +36,7 @@
   <ItemGroup>
     <Reference Include="0Harmony, Version=1.2.0.1, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\RimWorld\Mods\VanillaExpandedProsthetic\Assemblies\0Harmony.dll</HintPath>
+      <HintPath>..\..\Dependencies\0Harmony.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>C:\Program Files (x86)\Steam\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
@@ -62,16 +62,19 @@
     <Compile Include="MSE_DefOf\MSE_HediffDefOf.cs" />
     <Compile Include="MSE_HediffComp\HediffComp_AdditionalHediff.cs" />
     <Compile Include="MSE_HediffComp\HediffComp_InitialZeroSeverity.cs" />
+    <Compile Include="MSE_HediffComp\HediffComp_PrettyLabel.cs" />
     <Compile Include="MSE_HediffComp\Properties\HediffCompProperties_AdditionalHediff.cs" />
     <Compile Include="MSE_HediffComp\Properties\HediffCompProperties_InitialZeroSeverity.cs" />
+    <Compile Include="MSE_HediffComp\Properties\HediffCompProperties_PrettyLabel.cs" />
     <Compile Include="MSE_Hediff\Hediff_AddedPartModule.cs" />
     <Compile Include="MSE_Hediff\Hediff_AddedPartSystem.cs" />
     <Compile Include="MSE_Hediff\Hediff_AddedPartSystemNoModule.cs" />
     <Compile Include="MSE_Hediff\Hediff_BodyPartModule.cs" />
-    <Compile Include="MSE_Hediff\Hediff_BodyPartNullModule.cs" />
+    <Compile Include="MSE_Recipe\Recipe_InstallImplantSystem.cs" />
     <Compile Include="MSE_Recipe\Recipe_InstallNaturalPartSystem.cs" />
     <Compile Include="MSE_Recipe\Recipe_RemoveBodyPart.cs" />
     <Compile Include="MSE_Recipe\Recipe_RemoveBodyPartSystem.cs" />
+    <Compile Include="MSE_Recipe\Recipe_RemoveImplantSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MSE_Recipe\Recipe_InstallBodyPartModule.cs" />
   </ItemGroup>
