--- a/Source/OrenoMSE.ModSupport/OrenoMSE.ModSupport.csproj
+++ b/Source/OrenoMSE.ModSupport/OrenoMSE.ModSupport.csproj
@@ -33,7 +33,7 @@
   <ItemGroup>
     <Reference Include="0Harmony, Version=1.2.0.1, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\RimWorld\Mods\MedicalSystemExpansion\Assemblies\0Harmony.dll</HintPath>
+      <HintPath>..\..\Dependencies\0Harmony.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>C:\Program Files (x86)\Steam\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
