Changed ver to 2.0

--- a/Source/MedicalSystemExpansion/OrenoMSE.csproj
+++ b/Source/MedicalSystemExpansion/OrenoMSE.csproj
@@ -56,6 +56,9 @@
     <Compile Include="Harmony\Harmony_HediffAddedPart.cs" />
     <Compile Include="Harmony\Harmony_Hediff.cs" />
     <Compile Include="Harmony\Harmony_HediffImplant.cs" />
+    <Compile Include="Harmony\Harmony_HediffUtility.cs" />
+    <Compile Include="Harmony\Harmony_HediffWithComps.cs" />
+    <Compile Include="Harmony\Harmony_PawnDraftController.cs" />
     <Compile Include="Harmony\Harmony_RecipeInstallArtificialBodyPart.cs" />
     <Compile Include="Harmony\Harmony_PawnGenerator.cs" />
     <Compile Include="Harmony\Harmony_RecipeInstallNaturalBodyPart.cs" />
@@ -63,9 +66,20 @@
     <Compile Include="Harmony\MSE_SafeReflections.cs" />
     <Compile Include="MedicalSystemExpansion.cs" />
     <Compile Include="MSE_DefModExtension\MSE_AdditionalHediff.cs" />
+    <Compile Include="MSE_DefModExtension\MSE_DontHealInjury.cs" />
     <Compile Include="MSE_DefModExtension\MSE_HediffPrettyLabel.cs" />
     <Compile Include="MSE_DefModExtension\MSE_SpawnInitialSeverity.cs" />
+    <Compile Include="MSE_DefModExtension\MSE_ImplantSystem.cs" />
     <Compile Include="MSE_DefOf\MSE_HediffDefOf.cs" />
+    <Compile Include="MSE_HediffComp\HediffComp_HediffGizmo.cs" />
+    <Compile Include="MSE_HediffComp\HediffComp_Painstopper.cs" />
+    <Compile Include="MSE_HediffComp\HediffComp_PartModule.cs" />
+    <Compile Include="MSE_HediffComp\HediffComp_PartSystem.cs" />
+    <Compile Include="MSE_HediffComp\HediffComp_PartSystemSelfRepair.cs" />
+    <Compile Include="MSE_HediffComp\Properties\HediffCompProperties_PartModule.cs" />
+    <Compile Include="MSE_HediffComp\Properties\HediffCompProperties_PartSystem.cs" />
+    <Compile Include="MSE_HediffComp\Properties\HediffCompProperties_PartSystemSelfRepair.cs" />
+    <Compile Include="MSE_HediffComp\Properties\HediffCompProperties_Painstopper.cs" />
     <Compile Include="MSE_Hediff\Hediff_SurgerySupport.cs" />
     <Compile Include="MSE_Hediff\Hediff_AddedPartModule.cs" />
     <Compile Include="MSE_Hediff\Hediff_AddedPartSystem.cs" />
